@@ -2,6 +2,7 @@
    - documentation fixes
    - add new "tap"s for pipeline: array and first
    - extend tube() and tubify() to include options
+   - add "gate" to pipeline/sequence
 
 0.734  2016-06-24 08:03:56 CEST
    - release after 126 PASSes in CPAN Testers (thanks!)
